<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="cz.muni.fi.pv256.movio2.uco_410371.moviedetail.MovieDetailActivity"
    tools:ignore="MergeRootFrame">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/movie_header_height"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_movie_back_poster"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:layout_collapseMode="parallax">

                    <TextView
                        android:id="@+id/text_movie_title_expanded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/text_detail_margin"
                        android:layout_marginStart="@dimen/text_detail_margin"
                        android:paddingLeft="@dimen/text_padding"
                        android:paddingStart="@dimen/text_padding"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/movie_detail_title_text_size"/>

                    <TextView
                        android:id="@+id/text_movie_director"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_movie_title_expanded"
                        android:layout_marginLeft="@dimen/text_detail_margin"
                        android:layout_marginStart="@dimen/text_detail_margin"
                        android:paddingLeft="@dimen/text_padding"
                        android:paddingStart="@dimen/text_padding"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/movie_detail_director_text_size"/>

                    <TextView
                        android:id="@+id/text_movie_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_movie_title_expanded"
                        android:layout_toEndOf="@id/text_movie_director"
                        android:layout_toRightOf="@id/text_movie_director"
                        android:paddingLeft="@dimen/text_padding"
                        android:paddingStart="@dimen/text_padding"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/movie_detail_year_text_size"/>

                </RelativeLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/image_movie_poster"
                android:layout_width="@dimen/image_poster_width"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/image_margin"
                android:layout_marginLeft="@dimen/image_margin"
                android:layout_marginStart="@dimen/image_margin"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <TextView
                    android:id="@+id/text_movie_title_collapsed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginStart="@dimen/text_margin"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_toolbar_title_size"/>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/movie_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@+id/image_movie_back_poster"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@mipmap/ic_add_circle"/>

</android.support.design.widget.CoordinatorLayout>
