<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_toggle"
        android:orderInCategory="100"
        android:title="@string/action_toogle_on"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.Switch"/>

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="200"
        android:title="Refresh"
        android:icon="@android:drawable/stat_notify_sync"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>