<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/movies_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cz.muni.fi.pv256.movio2.uco_410371.movies.MoviesFragment"
    tools:showIn="@layout/movies_activity">

    <include layout="@layout/movies_list"/>

</FrameLayout>